--- a/index4.html
+++ b/index4.html
@@ -1,142 +1,38 @@
-<div id="svg-wrapper">
-  <!-- SVG inicial (cuadrado) -->
-  <div id="svg-square" class="svg-containedor"></div>
-  <!-- SVG destino (rectángulo, oculto al inicio) -->
-  <div id="svg-rect" class="svg-containedor hidden"></div>
-</div>
+<section id="stay" style="height:100vh; background:tomato;">Sección 1</section>
+<section id="stay" style="height:100vh; background:gold;">Sección 2</section>
+<section id="stay" style="height:100vh; background:lightgreen;">Sección 3</section>
+<section id="stay" style="height:100vh; background:skyblue;">Sección 4</section>
 
-<style>
-  #svg-wrapper {
-    position: fixed;
-    width: 100%;
-    height: 200vh;
-    /* espacio para scroll */
-    overflow: hidden;
-  }
-
-  .svg-containedor {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  /* ahora se oculta con opacity (para que GSAP pueda medir elementos) */
-  .hidden {
-    opacity: 0;
-    pointer-events: none;
-  }
-
-  .INDI path {
-    fill: #eee;
-  }
-
-  .LAB path {
-    fill: #eee;
-  }
-
-  .colorkey path {
-    fill: blueviolet;
-  }
-
-  svg {
-    width: 100%;
-    height: auto;
-  }
-</style>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 <script>
-  document.addEventListener("DOMContentLoaded", async () => {
-    const [squareText, rectText] = await Promise.all([
-      fetch("svg/indi-lab_Square.svg").then(r => r.text()),
-      fetch("svg/indi-lab_Vertical.svg").then(r => r.text())
-    ]);
+  const sections = document.querySelectorAll('#stay');
+  let current = 0;       // índice de la sección actual
+  let isScrolling = false;
 
-    const squareContainer = document.getElementById("svg-square");
-    const rectContainer = document.getElementById("svg-rect");
+  function goToSection(index) {
+    if (index < 0 || index >= sections.length) return;
+    isScrolling = true;
+    current = index;
+    sections[current].scrollIntoView({ behavior: "smooth" });
+    setTimeout(() => (isScrolling = false), 600); // evita rebotes
+  }
 
-    squareContainer.innerHTML = squareText;
-    rectContainer.innerHTML = rectText;
+  // --- Control con rueda del mouse ---
+  window.addEventListener("wheel", (e) => {
+    if (isScrolling) return;
+    if (e.deltaY > 0) {
+      goToSection(current + 1); // scroll hacia abajo → siguiente
+    } else if (e.deltaY < 0) {
+      goToSection(current - 1); // scroll hacia arriba → anterior
+    }
+  });
 
-    const squareSvg = squareContainer.querySelector("svg");
-    const rectSvg = rectContainer.querySelector("svg");
-
-    // IDs que queremos animar
-    const ids = ["INDI", "LAB", "keyTop", "keyButton"];
-
-    // Grupos completos
-    const squareGroup = squareSvg.querySelector("#IndiGrup");
-    const rectGroup = rectSvg.querySelector("#IndiGrup");
-
-    // Escala inicial del cuadrado
-    gsap.set(squareGroup, { scale: 0.2, y: "5%", transformOrigin: "top center" });
-
-    // Calcular posiciones de rectGroup con respecto al wrapper
-    const wrapper = document.getElementById("svg-wrapper");
-    const wrapperRect = wrapper.getBoundingClientRect();
-    const targetX = wrapperRect.width * 0.015; // 1.5%
-    const targetY = wrapperRect.height * 0.02; // 2%
-
-    // Posición final del rectángulo
-    gsap.set(rectGroup, {
-      scale: 0.15,
-      x: targetX,
-      y: targetY,
-      transformOrigin: "top left"
-    });
-
-    // Timeline con scroll
-    gsap.registerPlugin(ScrollTrigger);
-
-    const tl = gsap.timeline({
-      scrollTrigger: {
-        trigger: "#svg-wrapper",
-        start: "top top",
-        end: "bottom top",
-        scrub: 1,
-        markers: true
-      }
-    });
-
-    // Morph de cada elemento
-    ids.forEach(id => {
-      const fromEl = squareSvg.querySelector(`#${id}`);
-      const toEl = rectSvg.querySelector(`#${id}`);
-      if (!fromEl || !toEl) return;
-
-      const fromBox = fromEl.getBBox();
-      const toBox = toEl.getBBox();
-
-      // Diferencias de posición
-      const dx = (toBox.x + toBox.width / 2) - (fromBox.x + fromBox.width / 2);
-      const dy = (toBox.y + toBox.height / 2) - (fromBox.y + fromBox.height / 2);
-
-      // Escala relativa
-      const scaleX = toBox.width / fromBox.width;
-      const scaleY = toBox.height / fromBox.height;
-      const scale = Math.min(scaleX, scaleY);
-
-      gsap.set(fromEl, { transformOrigin: "50% 50%" });
-
-      tl.to(fromEl, {
-        x: dx,
-        y: dy,
-        scale: scale,
-        ease: "power2.inOut"
-      }, 0);
-    });
-
-    tl.to(squareGroup, {
-      y: "-1.5%",
-      x: "-66%",
-      scale: 0.025,
-      duration: 0.5,
-      transformOrigin: "top left" // esquina superior izquierda del grupo
-    }, 0);
-
-
+  // --- Control con teclado ---
+  window.addEventListener("keydown", (e) => {
+    if (isScrolling) return;
+    if (e.key === "ArrowDown") {
+      goToSection(current + 1);
+    } else if (e.key === "ArrowUp") {
+      goToSection(current - 1);
+    }
   });
 </script>
