--- a/projects/ViviendaModular/pruebas.html
+++ b/projects/ViviendaModular/pruebas.html
@@ -3,17 +3,154 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Vivienda Modular</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- GSAP -->
+    <title>Scroll Image Sequence</title>
+
+    <style>
+        body,
+        html {
+            margin: 0;
+            padding: 0;
+            background-color: black;
+            font-family: sans-serif;
+            overflow-x: hidden;
+        }
+
+        .video-scroll-wrapper {
+            position: relative;
+            width: 100%;
+        }
+
+        .video-fullscreen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100vw;
+            height: 100vh;
+            z-index: 1;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* Canvas ocupa todo el área y tiene fondo rojo para debug */
+        #image-sequence {
+            display: block;
+            width: 100vw;
+            height: 100vh;
+            background: red;
+        }
+
+        .TextLarge {
+            margin-top: 120vh;
+            text-align: center;
+            font-size: 4rem;
+            color: white;
+        }
+
+
+        /* Secciones */
+        section {
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: relative;
+            /* z-index: 10; */
+        }
+
+        /* Card genérica */
+        .card {
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 2rem;
+            border-radius: 1rem;
+            max-width: 800px;
+            text-align: center;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5);
+            z-index: 10;
+        }
+
+        .card h1,
+        .card h2,
+        .card h3 {
+            margin: 0.5rem 0;
+        }
+
+        .card p {
+            line-height: 1.5;
+        }
+
+        p {
+            color: white;
+        }
+
+        .white {
+            color: white;
+        }
+
+        .TextLarge {
+            display: flex;
+            justify-content: center;
+            /* centra horizontalmente */
+            align-items: center;
+            /* centra verticalmente si es más corto que la pantalla */
+            padding: 4rem 2rem;
+            background-color: black;
+            /* mantiene coherencia con el resto */
+        }
+
+        .TextLarge div {
+            max-width: 900px;
+            /* ancho de lectura cómodo */
+            text-align: justify;
+            /* texto justificado */
+            color: white;
+            line-height: 1.8;
+        }
+
+        .TextLarge h2 {
+            text-align: center;
+            /* título centrado */
+            margin-bottom: 2rem;
+            font-size: 2rem;
+            color: white;
+        }
+
+
+
+        .video-fullscreen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        z-index: 0; /* Queda detrás */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #image-sequence {
+        display: block;
+        width: 100vw;
+        height: 100vh;
+        background: black;
+    }
+
+    section {
+        position: relative;
+        z-index: 10; /* Las cards estarán arriba */
+    }
+    </style>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
-
-    <link rel="stylesheet" href="css/style_viviendamodular.css">
 </head>
 
 <body>
-   <div class="video-scroll-wrapper">
+
+    <div class="video-scroll-wrapper">
         <div class="video-fullscreen">
             <canvas id="image-sequence"></canvas>
         </div>
@@ -114,8 +251,84 @@
         </div>
     </section>
 
-    <script src="js/vivienda_modular.js"></script>
-   
+    <script>
+        gsap.registerPlugin(ScrollTrigger);
+
+    const canvas = document.getElementById("image-sequence");
+    const context = canvas.getContext("2d");
+
+    const frameStart = 1000;
+    const frameEnd = 1689;
+    const frameCount = frameEnd - frameStart + 1;
+    const currentFrame = index => `images/image_sequences/vivienda_${frameStart + index}.png`;
+
+    const images = [];
+    const imageSeq = { frame: 0 };
+
+    for (let i = 0; i < frameCount; i++) {
+        const img = new Image();
+        img.src = currentFrame(i);
+        images.push(img);
+    }
+
+    function resizeCanvas() {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+        render();
+    }
+    window.addEventListener("resize", resizeCanvas);
+    resizeCanvas();
+
+    function render() {
+        const img = images[imageSeq.frame];
+        if (img && img.complete) {
+            context.clearRect(0, 0, canvas.width, canvas.height);
+            context.drawImage(img, 0, 0, canvas.width, canvas.height);
+        }
+    }
+
+    // Pin de la secuencia
+    ScrollTrigger.create({
+        trigger: ".video-scroll-wrapper",
+        start: "top top",
+        endTrigger: ".TextLarge",
+        end: "top top",
+        pin: ".video-fullscreen",
+        pinSpacing: false, // evita espacio extra
+        scrub: false,
+        markers: true
+    });
+
+    // Animación de frames ligada al scroll
+    gsap.to(imageSeq, {
+        frame: frameCount - 1,
+        snap: "frame",
+        ease: "none",
+        scrollTrigger: {
+            trigger: ".video-scroll-wrapper",
+            start: "top top",
+            endTrigger: ".TextLarge",
+            end: "top top",
+            scrub: 1
+        },
+        onUpdate: render
+    });
+
+    // Fade out cuando llega el texto
+    gsap.to(".video-fullscreen", {
+        opacity: 0,
+        ease: "power2.out",
+        scrollTrigger: {
+            trigger: ".TextLarge",
+            start: "top bottom",
+            end: "top center",
+            scrub: true
+        }
+    });
+
+    images[0].onload = render;
+    </script>
+
 </body>
 
 </html>
