--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <article class="blog-item">
           <a href="projects/ViviendaModular/vivienda_modular.html"><img src="projects/ViviendaModular/images/11viviendamodular-01.png" alt="Post 1" class="blog-thumb">
           <div class="blog-info">
-            <h3 class="blog-title">Vivienda modular</h3>
+            <h3 class="blog-title">VIVIENDA MODULAR</h3>
             <p class="blog-date">Diciembre 2024</p></a>
           </div>
         </article>
@@ -128,7 +128,7 @@
         <article class="blog-item">
           <img src="projects/Reto2025/images/Riu2025-01.png" alt="Post 2" class="blog-thumb">
           <div class="blog-info">
-            <h3 class="blog-title">Reto de innovación Urbana</h3>
+            <h3 class="blog-title">RETO DE INNOVACIÓN URBANA</h3>
             <p class="blog-date"> Sept 2025</p>
           </div>
         </article>
