--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
       <!-- Columna izquierda: BLOG -->
       <div class="menu-blog">
         <article class="blog-item">
-          <a href="projects/ViviendaModular/vivienda_modular.html"><img src="projects/ViviendaModular/images/11viviendamodular-01.png" alt="Post 1" class="blog-thumb">
+          <a href="projects/ViviendaModular/vivienda_modular.html">
+            <img src="projects/ViviendaModular/images/11viviendamodular-01.png" alt="Post 1" class="blog-thumb">
           <div class="blog-info">
             <h3 class="blog-title">VIVIENDA MODULAR</h3>
             <p class="blog-date">Diciembre 2024</p></a>
@@ -126,10 +127,11 @@
         </article>
 
         <article class="blog-item">
+          <a href="projects/Reto2025/reto2025.html">
           <img src="projects/Reto2025/images/Riu2025-01.png" alt="Post 2" class="blog-thumb">
           <div class="blog-info">
             <h3 class="blog-title">RETO DE INNOVACIÓN URBANA</h3>
-            <p class="blog-date"> Sept 2025</p>
+            <p class="blog-date"> Sept 2025</p></a>
           </div>
         </article>
       </div>
